render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_open_path_with_dotted_center_stroke.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="116" height="96" viewBox="0 0 116 96">
	<path fill="red" transform="translate(8 8)" d="M0 4C0.53043294 3.9999998 1.0406774 3.8985054 1.5307336 3.6955175C2.0207896 3.4925296 2.4533541 3.2034996 2.8284268 2.8284268C3.2034996 2.4533541 3.4925299 2.0207896 3.6955178 1.5307336C3.8985057 1.0406774 3.9999998 0.53043294 4 0C3.9999998 -0.53043294 3.8985054 -1.0406774 3.6955175 -1.5307336C3.4925296 -2.0207896 3.2034996 -2.4533541 2.8284268 -2.8284268C2.4533541 -3.2034996 2.0207896 -3.4925299 1.5307336 -3.6955178C1.0406774 -3.8985057 0.53043294 -3.9999998 0 -4C-0.53043294 -3.9999998 -1.0406774 -3.8985054 -1.5307336 -3.6955175C-2.0207896 -3.4925296 -2.4533541 -3.2034996 -2.8284268 -2.8284268C-3.2034996 -2.4533541 -3.4925299 -2.0207896 -3.6955178 -1.5307336C-3.8985057 -1.0406774 -3.9999998 -0.53043294 -4 0C-3.9999998 0.53043294 -3.8985054 1.0406774 -3.6955175 1.5307336C-3.4925296 2.0207896 -3.2034996 2.4533541 -2.8284268 2.8284268C-2.4533541 3.2034996 -2.0207896 3.4925299 -1.5307336 3.6955178C-1.0406774 3.8985057 -0.53043294 3.9999998 0 4ZM13 4C13.530433 3.9999998 14.040677 3.8985054 14.530733 3.6955175C15.020789 3.4925296 15.453353 3.2034996 15.828426 2.8284268C16.203499 2.4533541 16.492529 2.0207896 16.695517 1.5307336C16.898506 1.0406774 17 0.53043294 17 0C17 -0.53043294 16.898506 -1.0406774 16.695517 -1.5307336C16.492529 -2.0207896 16.203499 -2.4533541 15.828426 -2.8284268C15.453353 -3.2034996 15.020789 -3.4925299 14.530733 -3.6955178C14.040677 -3.8985057 13.530433 -3.9999998 13 -4C12.469566 -3.9999998 11.959321 -3.8985054 11.469265 -3.6955175C10.979209 -3.4925296 10.546644 -3.2034996 10.171573 -2.8284268C9.7964993 -2.4533541 9.5074692 -2.0207896 9.3044815 -1.5307336C9.1014938 -1.0406774 9 -0.53043294 9 0C9 0.53043294 9.1014938 1.0406774 9.3044815 1.5307336C9.5074692 2.0207896 9.7964993 2.4533541 10.171573 2.8284268C10.546644 3.2034996 10.979209 3.4925299 11.469265 3.6955178C11.959321 3.8985057 12.469566 3.9999998 13 4ZM26 4C26.530432 3.9999998 27.040674 3.8985054 27.530731 3.6955175C28.020788 3.4925296 28.453352 3.2034996 28.828426 2.8284268C29.203497 2.4533541 29.492527 2.0207896 29.695515 1.5307336C29.898502 1.0406774 29.999998 0.53043294 30 0C29.999998 -0.53043294 29.898502 -1.0406774 29.695515 -1.5307336C29.492525 -2.0207896 29.203495 -2.4533541 28.828424 -2.8284268C28.453352 -3.2034996 28.020788 -3.4925299 27.530731 -3.6955178C27.040674 -3.8985057 26.530432 -3.9999998 26 -4C25.469564 -3.9999998 24.95932 -3.8985054 24.469263 -3.6955175C23.979206 -3.4925296 23.54664 -3.2034996 23.17157 -2.8284268C22.796495 -2.4533541 22.507465 -2.0207896 22.30448 -1.5307336C22.101492 -1.0406774 21.999998 -0.53043294 22 0C21.999998 0.53043294 22.101492 1.0406774 22.30448 1.5307336C22.507467 2.0207896 22.796497 2.4533541 23.171572 2.8284268C23.546642 3.2034996 23.979206 3.4925299 24.469263 3.6955178C24.95932 3.8985057 25.469564 3.9999998 26 4ZM39 4C39.53043 3.9999998 40.040676 3.8985054 40.530731 3.6955175C41.020786 3.4925296 41.45335 3.2034996 41.828423 2.8284268C42.203495 2.4533541 42.492523 2.0207896 42.695515 1.5307336C42.898506 1.0406774 43 0.53043294 43 0C43 -0.53043294 42.898506 -1.0406774 42.695515 -1.5307336C42.492523 -2.0207896 42.203495 -2.4533541 41.828423 -2.8284268C41.45335 -3.2034996 41.020786 -3.4925299 40.530731 -3.6955178C40.040676 -3.8985057 39.53043 -3.9999998 39 -4C38.469563 -3.9999998 37.959316 -3.8985054 37.469261 -3.6955175C36.979206 -3.4925296 36.546642 -3.2034996 36.17157 -2.8284268C35.796497 -2.4533541 35.507465 -2.0207896 35.304478 -1.5307336C35.10149 -1.0406774 34.999996 -0.53043294 35 0C34.999996 0.53043294 35.10149 1.0406774 35.304478 1.5307336C35.507465 2.0207896 35.796497 2.4533541 36.17157 2.8284268C36.546642 3.2034996 36.979206 3.4925299 37.469261 3.6955178C37.959316 3.8985057 38.469563 3.9999998 39 4ZM52 4C52.53043 3.9999998 53.040676 3.8985054 53.530731 3.6955175C54.020782 3.4925296 54.453346 3.2034996 54.828423 2.8284268C55.203495 2.4533541 55.492523 2.0207896 55.695511 1.5307336C55.898499 1.0406774 55.999996 0.53043294 56 0C55.999996 -0.53043294 55.898499 -1.0406774 55.695511 -1.5307336C55.492523 -2.0207896 55.203495 -2.4533541 54.828423 -2.8284268C54.453346 -3.2034996 54.020782 -3.4925299 53.530727 -3.6955178C53.040672 -3.8985057 52.53043 -3.9999998 52 -4C51.469563 -3.9999998 50.959316 -3.8985054 50.469261 -3.6955175C49.979206 -3.4925296 49.546642 -3.2034996 49.17157 -2.8284268C48.796497 -2.4533541 48.507465 -2.0207896 48.304478 -1.5307336C48.10149 -1.0406774 47.999996 -0.53043294 48 0C47.999996 0.53043294 48.10149 1.0406774 48.304478 1.5307336C48.507465 2.0207896 48.796497 2.4533541 49.17157 2.8284268C49.546642 3.2034996 49.979206 3.4925299 50.469261 3.6955178C50.959316 3.8985057 51.469563 3.9999998 52 4ZM65 4C65.530426 3.9999998 66.040665 3.8985054 66.530724 3.6955175C67.020782 3.4925296 67.453346 3.2034996 67.828423 2.8284268C68.203491 2.4533541 68.492523 2.0207896 68.695511 1.5307336C68.898506 1.0406774 69 0.53043294 69 0C69 -0.53043294 68.898506 -1.0406774 68.695511 -1.5307336C68.492523 -2.0207896 68.203491 -2.4533541 67.828423 -2.8284268C67.453346 -3.2034996 67.020782 -3.4925299 66.530731 -3.6955178C66.040672 -3.8985057 65.530426 -3.9999998 65 -4C64.469566 -3.9999998 63.959316 -3.8985054 63.469257 -3.6955175C62.979202 -3.4925296 62.546642 -3.2034996 62.17157 -2.8284268C61.796494 -2.4533541 61.507462 -2.0207896 61.304478 -1.5307336C61.101486 -1.0406774 60.999996 -0.53043294 61 0C60.999996 0.53043294 61.101486 1.0406774 61.304478 1.5307336C61.507462 2.0207896 61.796494 2.4533541 62.17157 2.8284268C62.546642 3.2034996 62.979202 3.4925299 63.469257 3.6955178C63.959316 3.8985057 64.469566 3.9999998 65 4ZM78 4C78.530426 3.9999998 79.040665 3.8985054 79.530724 3.6955175C80.020782 3.4925296 80.453346 3.2034996 80.828423 2.8284268C81.203491 2.4533541 81.492523 2.0207896 81.695511 1.5307336C81.898506 1.0406774 82 0.53043294 82 0C82 -0.53043294 81.898506 -1.0406774 81.695511 -1.5307336C81.492523 -2.0207896 81.203491 -2.4533541 80.828423 -2.8284268C80.453346 -3.2034996 80.020782 -3.4925299 79.530724 -3.6955178C79.040665 -3.8985057 78.530426 -3.9999998 78 -4C77.469566 -3.9999998 76.959312 -3.8985054 76.469254 -3.6955175C75.979202 -3.4925296 75.546638 -3.2034996 75.17157 -2.8284268C74.796501 -2.4533541 74.507469 -2.0207896 74.304474 -1.5307336C74.101494 -1.0406774 74 -0.53043294 74 0C74 0.53043294 74.101494 1.0406774 74.304474 1.5307336C74.507469 2.0207896 74.796501 2.4533541 75.17157 2.8284268C75.546638 3.2034996 75.979202 3.4925299 76.469254 3.6955178C76.959312 3.8985057 77.469566 3.9999998 78 4ZM91 4C91.530426 3.9999998 92.040665 3.8985054 92.530716 3.6955175C93.020775 3.4925296 93.453346 3.2034996 93.828423 2.8284268C94.203491 2.4533541 94.492516 2.0207896 94.695511 1.5307336C94.898499 1.0406774 94.999992 0.53043294 95 0C94.999992 -0.53043294 94.898499 -1.0406774 94.695511 -1.5307336C94.492516 -2.0207896 94.203491 -2.4533541 93.828423 -2.8284268C93.453346 -3.2034996 93.020775 -3.4925299 92.530716 -3.6955178C92.040665 -3.8985057 91.530426 -3.9999998 91 -4C90.469566 -3.9999998 89.959312 -3.8985054 89.469254 -3.6955175C88.979202 -3.4925296 88.546638 -3.2034996 88.17157 -2.8284268C87.796501 -2.4533541 87.507469 -2.0207896 87.304474 -1.5307336C87.101494 -1.0406774 87 -0.53043294 87 0C87 0.53043294 87.101494 1.0406774 87.304474 1.5307336C87.507469 2.0207896 87.796501 2.4533541 88.17157 2.8284268C88.546638 3.2034996 88.979202 3.4925299 89.469254 3.6955178C89.959312 3.8985057 90.469566 3.9999998 91 4ZM100 8C100.53043 7.9999995 101.04066 7.8985052 101.53072 7.6955171C102.02078 7.4925289 102.45335 7.2034988 102.82842 6.8284264C103.20349 6.4533534 103.49252 6.0207887 103.69551 5.5307331C103.8985 5.0406766 103.99999 4.5304322 104 4C103.99999 3.4695668 103.8985 2.9593222 103.69551 2.4692659C103.49252 1.9792099 103.20349 1.5466455 102.82842 1.1715728C102.45335 0.79650003 102.02078 0.50746971 101.53072 0.30448183C101.04066 0.10149394 100.53043 0 100 0C99.469566 0 98.95932 0.10149394 98.469261 0.30448183C97.979202 0.50746971 97.546638 0.79650003 97.17157 1.1715728C96.796494 1.5466455 96.507462 1.9792099 96.304474 2.4692659C96.101486 2.9593222 95.999992 3.4695668 96 4C95.999992 4.5304322 96.101486 5.0406766 96.304474 5.5307331C96.507462 6.0207887 96.796494 6.4533534 97.17157 6.8284264C97.546638 7.2034988 97.979202 7.4925294 98.469254 7.6955175C98.959312 7.8985052 99.469566 7.9999995 100 8ZM100 21C100.53043 21 101.04066 20.898506 101.53072 20.695517C102.02078 20.492529 102.45335 20.203499 102.82842 19.828426C103.20349 19.453352 103.49252 19.020788 103.69551 18.530731C103.8985 18.040674 103.99999 17.530432 104 17C103.99999 16.469566 103.8985 15.959321 103.69551 15.469265C103.49252 14.979209 103.20349 14.546644 102.82842 14.171572C102.45335 13.796498 102.02078 13.507468 101.53072 13.304481C101.04066 13.101494 100.53043 13 100 13C99.469566 13 98.95932 13.101494 98.469261 13.304481C97.979202 13.507468 97.546638 13.796498 97.17157 14.171572C96.796494 14.546644 96.507462 14.979209 96.304474 15.469265C96.101486 15.959321 95.999992 16.469566 96 17C95.999992 17.530432 96.101486 18.040674 96.304474 18.530731C96.507462 19.020788 96.796494 19.453352 97.17157 19.828426C97.546638 20.203499 97.979202 20.492529 98.469254 20.695517C98.959312 20.898506 99.469566 21 100 21ZM100 34C100.53043 34 101.04066 33.898506 101.53072 33.695515C102.02078 33.492527 102.45335 33.203499 102.82842 32.828426C103.20349 32.453354 103.49252 32.020786 103.69551 31.530731C103.8985 31.040674 103.99999 30.530432 104 30C103.99999 29.469564 103.8985 28.95932 103.69551 28.469263C103.49252 27.979206 103.20349 27.54664 102.82842 27.17157C102.45335 26.796495 102.02078 26.507465 101.53072 26.30448C101.04066 26.101494 100.53043 26 100 26C99.469566 26 98.95932 26.101494 98.469261 26.30448C97.979202 26.507465 97.546638 26.796495 97.17157 27.17157C96.796494 27.54664 96.507462 27.979206 96.304474 28.469263C96.101486 28.95932 95.999992 29.469564 96 30C95.999992 30.530432 96.101486 31.040674 96.304474 31.530731C96.507462 32.020786 96.796494 32.453354 97.17157 32.828426C97.546638 33.203499 97.979202 33.492527 98.469254 33.695515C98.959312 33.898506 99.469566 34 100 34ZM100 47C100.53043 47 101.04066 46.898502 101.53072 46.695511C102.02078 46.492523 102.45335 46.203495 102.82842 45.828423C103.20349 45.45335 103.49252 45.020782 103.69551 44.530727C103.8985 44.040672 103.99999 43.53043 104 43C103.99999 42.469563 103.8985 41.959316 103.69551 41.469261C103.49252 40.979206 103.20349 40.546642 102.82842 40.17157C102.45335 39.796497 102.02078 39.507469 101.53072 39.304482C101.04066 39.101494 100.53043 39 100 39C99.469566 39 98.95932 39.101494 98.469261 39.304482C97.979202 39.507469 97.546638 39.796497 97.17157 40.17157C96.796494 40.546642 96.507462 40.979206 96.304474 41.469261C96.101486 41.959316 95.999992 42.469563 96 43C95.999992 43.53043 96.101486 44.040676 96.304474 44.530731C96.507462 45.020786 96.796494 45.453354 97.17157 45.828426C97.546638 46.203499 97.979202 46.492527 98.469254 46.695515C98.959312 46.898506 99.469566 47 100 47ZM100 60C100.53043 59.999996 101.04066 59.898499 101.53072 59.695511C102.02078 59.492519 102.45335 59.203491 102.82842 58.828423C103.20349 58.453346 103.49252 58.020782 103.69551 57.530727C103.8985 57.040672 103.99999 56.53043 104 56C103.99999 55.469563 103.8985 54.959316 103.69551 54.469261C103.49252 53.979206 103.20349 53.546642 102.82842 53.17157C102.45335 52.796497 102.02078 52.507465 101.53072 52.304478C101.04066 52.101494 100.53043 52 100 52C99.469566 52 98.95932 52.101494 98.469261 52.304478C97.979202 52.507465 97.546638 52.796497 97.17157 53.17157C96.796494 53.546642 96.507462 53.979206 96.304474 54.469261C96.101486 54.959316 95.999992 55.469563 96 56C95.999992 56.53043 96.101486 57.040676 96.304474 57.530731C96.507462 58.020782 96.796494 58.453346 97.17157 58.828423C97.546638 59.203491 97.979202 59.492519 98.469254 59.695511C98.959312 59.898499 99.469566 59.999996 100 60ZM100 73C100.53043 73 101.04066 72.898506 101.53072 72.695511C102.02078 72.492523 102.45335 72.203491 102.82842 71.828423C103.20349 71.453346 103.49252 71.020782 103.69551 70.530731C103.8985 70.040672 103.99999 69.530426 104 69C103.99999 68.469566 103.8985 67.959312 103.69551 67.469254C103.49252 66.979202 103.20349 66.546638 102.82842 66.17157C102.45335 65.796501 102.02078 65.507469 101.53072 65.304474C101.04066 65.101494 100.53043 65 100 65C99.469566 65 98.95932 65.101494 98.469261 65.304474C97.979202 65.507469 97.546638 65.796501 97.17157 66.17157C96.796494 66.546638 96.507462 66.979202 96.304474 67.469254C96.101486 67.959312 95.999992 68.469566 96 69C95.999992 69.530426 96.101486 70.040665 96.304474 70.530724C96.507462 71.020782 96.796494 71.453346 97.17157 71.828423C97.546638 72.203491 97.979202 72.492523 98.469254 72.695511C98.959312 72.898506 99.469566 73 100 73ZM7 84C7.5304322 84 8.0406771 83.898506 8.5307331 83.695511C9.0207891 83.492523 9.4533529 83.203491 9.8284264 82.828423C10.203499 82.453346 10.492529 82.020782 10.695517 81.530724C10.898505 81.040665 10.999999 80.530426 11 80C10.999999 79.469566 10.898505 78.959312 10.695517 78.469254C10.492529 77.979202 10.203499 77.546638 9.8284264 77.17157C9.4533529 76.796501 9.0207891 76.507469 8.5307331 76.304474C8.0406771 76.101494 7.5304322 76 7 76C6.4695668 76 5.959322 76.101494 5.4692659 76.304474C4.9792094 76.507469 4.5466452 76.796501 4.1715727 77.17157C3.7964997 77.546638 3.5074694 77.979202 3.3044815 78.469254C3.1014936 78.959312 2.9999998 79.469566 3 80C2.9999998 80.530426 3.1014936 81.040665 3.3044815 81.530724C3.5074694 82.020782 3.7964997 82.453346 4.1715727 82.828423C4.5466452 83.203491 4.9792094 83.492523 5.4692659 83.695511C5.959322 83.898506 6.4695668 84 7 84ZM20 84C20.530432 84 21.040674 83.898506 21.530731 83.695511C22.020788 83.492523 22.453352 83.203491 22.828426 82.828423C23.203497 82.453346 23.492527 82.020782 23.695517 81.530724C23.898504 81.040665 23.999998 80.530426 24 80C23.999998 79.469566 23.898504 78.959312 23.695517 78.469254C23.492527 77.979202 23.203497 77.546638 22.828426 77.17157C22.453352 76.796501 22.020788 76.507469 21.530731 76.304474C21.040674 76.101494 20.530432 76 20 76C19.469566 76 18.959322 76.101494 18.469265 76.304474C17.979208 76.507469 17.546644 76.796501 17.171572 77.17157C16.796497 77.546638 16.507467 77.979202 16.30448 78.469254C16.101492 78.959312 15.999999 79.469566 16 80C15.999999 80.530426 16.101492 81.040665 16.30448 81.530724C16.507467 82.020782 16.796497 82.453346 17.171572 82.828423C17.546644 83.203491 17.979208 83.492523 18.469265 83.695511C18.959322 83.898506 19.469566 84 20 84ZM33 84C33.53043 84 34.040676 83.898506 34.530731 83.695511C35.020786 83.492523 35.453354 83.203491 35.828426 82.828423C36.203499 82.453346 36.492527 82.020782 36.695515 81.530724C36.898506 81.040665 37 80.530426 37 80C37 79.469566 36.898506 78.959312 36.695515 78.469254C36.492523 77.979202 36.203495 77.546638 35.828423 77.17157C35.45335 76.796501 35.020786 76.507469 34.530731 76.304474C34.040676 76.101494 33.53043 76 33 76C32.469563 76 31.959318 76.101494 31.469263 76.304474C30.979208 76.507469 30.546644 76.796501 30.171574 77.17157C29.796499 77.546638 29.507469 77.979202 29.30448 78.469254C29.101492 78.959312 28.999998 79.469566 29 80C28.999998 80.530426 29.101492 81.040665 29.30448 81.530724C29.507467 82.020782 29.796497 82.453346 30.171572 82.828423C30.546642 83.203491 30.979206 83.492523 31.469263 83.695511C31.959318 83.898506 32.469563 84 33 84ZM45.999996 84C46.530426 84 47.040668 83.898506 47.530724 83.695511C48.020779 83.492523 48.453346 83.203491 48.828423 82.828423C49.203495 82.453346 49.492523 82.020782 49.695511 81.530724C49.898499 81.040665 49.999992 80.530426 49.999996 80C49.999992 79.469566 49.898499 78.959312 49.695511 78.469254C49.492523 77.979202 49.203495 77.546638 48.828423 77.17157C48.453346 76.796501 48.020782 76.507469 47.530727 76.304474C47.040672 76.101494 46.530426 76 45.999996 76C45.469563 76 44.959316 76.101494 44.469261 76.304474C43.979202 76.507469 43.546638 76.796501 43.171566 77.17157C42.796494 77.546638 42.507462 77.979202 42.304474 78.469254C42.101486 78.959312 41.999992 79.469566 41.999996 80C41.999992 80.530426 42.101486 81.040665 42.304474 81.530724C42.507462 82.020782 42.796494 82.453346 43.171566 82.828423C43.546638 83.203491 43.979202 83.492523 44.469261 83.695511C44.959316 83.898506 45.469563 84 45.999996 84ZM59 84C59.53043 84 60.040672 83.898506 60.530724 83.695511C61.020779 83.492523 61.453346 83.203491 61.828423 82.828423C62.203495 82.453346 62.492523 82.020782 62.695515 81.530724C62.898502 81.040665 62.999996 80.530426 63 80C62.999996 79.469566 62.898502 78.959312 62.695511 78.469254C62.492523 77.979202 62.203495 77.546638 61.828423 77.17157C61.453346 76.796501 61.020782 76.507469 60.530727 76.304474C60.040672 76.101494 59.53043 76 59 76C58.469563 76 57.959316 76.101494 57.469257 76.304474C56.979202 76.507469 56.546642 76.796501 56.17157 77.17157C55.796494 77.546638 55.507462 77.979202 55.304474 78.469254C55.101486 78.959312 54.999996 79.469566 55 80C54.999996 80.530426 55.101486 81.040665 55.304474 81.530724C55.507462 82.020782 55.796494 82.453346 56.17157 82.828423C56.546642 83.203491 56.979202 83.492523 57.469257 83.695511C57.959316 83.898506 58.469563 84 59 84ZM72 84C72.530426 84 73.040665 83.898506 73.530724 83.695511C74.020782 83.492523 74.453346 83.203491 74.828423 82.828423C75.203491 82.453346 75.492523 82.020782 75.695511 81.530724C75.898506 81.040665 76 80.530426 76 80C76 79.469566 75.898506 78.959312 75.695511 78.469254C75.492523 77.979202 75.203491 77.546638 74.828423 77.17157C74.453346 76.796501 74.020782 76.507469 73.530724 76.304474C73.040665 76.101494 72.530426 76 72 76C71.469566 76 70.959312 76.101494 70.469254 76.304474C69.979202 76.507469 69.546638 76.796501 69.17157 77.17157C68.796501 77.546638 68.507469 77.979202 68.304474 78.469254C68.101494 78.959312 68 79.469566 68 80C68 80.530426 68.101494 81.040665 68.304474 81.530724C68.507469 82.020782 68.796501 82.453346 69.17157 82.828423C69.546638 83.203491 69.979202 83.492523 70.469254 83.695511C70.959312 83.898506 71.469566 84 72 84ZM85 84C85.530426 84 86.040665 83.898506 86.530724 83.695511C87.020782 83.492523 87.453346 83.203491 87.828423 82.828423C88.203491 82.453346 88.492523 82.020782 88.695511 81.530724C88.898506 81.040665 89 80.530426 89 80C89 79.469566 88.898506 78.959312 88.695511 78.469254C88.492523 77.979202 88.203491 77.546638 87.828423 77.17157C87.453346 76.796501 87.020775 76.507469 86.530716 76.304474C86.040665 76.101494 85.530426 76 85 76C84.469566 76 83.959312 76.101494 83.469254 76.304474C82.979202 76.507469 82.546638 76.796501 82.17157 77.17157C81.796501 77.546638 81.507469 77.979202 81.304474 78.469254C81.101494 78.959312 81 79.469566 81 80C81 80.530426 81.101494 81.040665 81.304474 81.530724C81.507469 82.020782 81.796501 82.453346 82.17157 82.828423C82.546638 83.203491 82.979202 83.492523 83.469254 83.695511C83.959312 83.898506 84.469566 84 85 84ZM98 84C98.530426 84 99.040665 83.898506 99.530724 83.695511C100.02078 83.492523 100.45335 83.203491 100.82842 82.828423C101.20349 82.453346 101.49252 82.020782 101.69551 81.530724C101.8985 81.040665 101.99999 80.530426 102 80C101.99999 79.469566 101.8985 78.959312 101.69551 78.469254C101.49252 77.979202 101.2035 77.546638 100.82843 77.17157C100.45335 76.796501 100.02078 76.507469 99.530724 76.304474C99.040665 76.101494 98.530426 76 98 76C97.469566 76 96.959312 76.101494 96.469254 76.304474C95.979195 76.507469 95.546631 76.796501 95.171562 77.17157C94.796494 77.546638 94.507462 77.979202 94.304474 78.469254C94.101494 78.959312 94 79.469566 94 80C94 80.530426 94.101494 81.040665 94.304474 81.530724C94.507469 82.020782 94.796501 82.453346 95.17157 82.828423C95.546638 83.203491 95.979202 83.492523 96.469261 83.695511C96.95932 83.898506 97.469566 84 98 84Z" fill-rule="evenodd"/>
</svg>
