render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_open_path_with_dotted_stroke_and_caps.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="344" height="294" viewBox="0 0 344 294">
	<path fill="#1040FF" transform="translate(102 102)" d="M24 -48L-24 0L24 48L24 -48ZM40 0C40 4 38 6 34 6C30 6 28 4 28 0C28 -4 30 -6 34 -6C38 -6 40 -4 40 0ZM57 0C57 4 55 6 51 6C47 6 45 4 45 0C45 -4 47 -6 51 -6C55 -6 57 -4 57 0ZM74 0C74 4 72 6 68 6C64 6 62 4 62 0C62 -4 64 -6 68 -6C72 -6 74 -4 74 0ZM91 0C91 4 89 6 85 6C81 6 79 4 79 0C79 -4 81 -6 85 -6C89 -6 91 -4 91 0ZM108 0C108 4 106 6 102 6C98 6 96 4 96 0C96 -4 98 -6 102 -6C106 -6 108 -4 108 0ZM125 0C125 4 123 6 119 6C115 6 113 4 113 0C113 -4 115 -6 119 -6C123 -6 125 -4 125 0ZM142 0C142 4 140 6 136 6C132 6 130 4 130 0C130 -4 132 -6 136 -6C140 -6 142 -4 142 0ZM146 13.000001C146 17 144 19 140 19C136 19 134 17 134 13.000001C134 9.000001 136 7.000001 140 7.000001C144 7.000001 146 9.000001 146 13.000001ZM146 30C146 34 144 36 140 36C136 36 134 34 134 30C134 26 136 24 140 24C144 24 146 26 146 30ZM146 47C146 51 144 53 140 53C136 53 134 51 134 47C134 43 136 41 140 41C144 41 146 43 146 47ZM146 64C146 68 144 70 140 70C136 70 134 68 134 64C134 60 136 58 140 58C144 58 146 60 146 64ZM24 90C24 106 16 114 0 114C-16 114 -24 106 -24 90C-24 74 -16 66 0 66C16 66 24 74 24 90ZM24 90C24 94 26 96 30 96C34 96 36 94 36 90C36 86 34 84 30 84C26 84 24 86 24 90ZM146 81C146 85 144 87 140 87C136 87 134 85 134 81C134 77 136 75 140 75C144 75 146 77 146 81ZM53 90C53 94 51 96 47 96C43 96 41 94 41 90C41 86 43 84 47 84C51 84 53 86 53 90ZM70 90C70 94 68 96 64 96C60 96 58 94 58 90C58 86 60 84 64 84C68 84 70 86 70 90ZM87 90C87 94 85 96 81 96C77 96 75 94 75 90C75 86 77 84 81 84C85 84 87 86 87 90ZM104 90C104 94 102 96 98 96C94 96 92 94 92 90C92 86 94 84 98 84C102 84 104 86 104 90ZM121 90C121 94 119 96 115 96C111 96 109 94 109 90C109 86 111 84 115 84C119 84 121 86 121 90ZM138 90C138 94 136 96 132 96C128 96 126 94 126 90C126 86 128 84 132 84C136 84 138 86 138 90Z" fill-rule="evenodd"/>
</svg>
