render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_open_path_with_image_stroke_and_caps.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="344" height="294" viewBox="0 0 344 294"><defs><clipPath id="imgstrokeclip0" clipPathUnits="userSpaceOnUse">
	<path transform="translate(102 102)" d="M24 -48L-24 0L24 48L24 6L134 6L134 84L23.2379 84C22.572813 81.424126 21.508844 79.025162 20.045998 76.803108C18.583151 74.581055 16.800131 72.655464 14.696939 71.026337C12.593748 69.397209 10.283548 68.152206 7.7663383 67.291321C5.2491293 66.430443 2.6603498 66 0 66C-3.1825976 66 -6.2440643 66.608963 -9.1844006 67.826889C-12.124738 69.044815 -14.720124 70.778999 -16.970562 73.029434C-19.220997 75.279869 -20.955179 77.875252 -22.173107 80.81559C-23.391035 83.75592 -23.999998 86.81739 -24 90C-23.999998 93.182594 -23.391035 96.244057 -22.173107 99.184387C-20.955179 102.12473 -19.220997 104.72012 -16.970562 106.97056C-14.720124 109.22099 -12.124738 110.95517 -9.1844006 112.1731C-6.2440643 113.39102 -3.1825976 113.99999 0 114C2.6603498 114 5.2491293 113.56956 7.7663383 112.70868C10.283548 111.84779 12.593748 110.60279 14.696939 108.97366C16.800131 107.34454 18.583151 105.41895 20.045998 103.1969C21.508844 100.97485 22.572813 98.575874 23.2379 96L146 96L146 -6L24 -6L24 -48Z" clip-rule="evenodd"/>
</clipPath></defs><g clip-path="url(#imgstrokeclip0)"><image href="images/test-fill.svg" x="-48" y="-48" width="236" height="186" preserveAspectRatio="xMidYMid slice" transform="matrix(1 0 0 1 102 102)"/></g></svg>
